@@ -1,3 +1,11 @@
+2014-12-27  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline:
+	2014-12-26  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/64409
+	* gcc.target/i386/pr64409.c: New test.
+
 2014-12-23  Janus Weil  <janus@gcc.gnu.org>
 
 	Backport from mainline
